--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url src/scss/styles.scss src/css/styles.css",
+    "css-build": "node-sass --omit-source-map-url src/scss/styles.scss dist/css/styles.css",
     "css-watch": "npm run css-build -- --watch",
     "start": "npm run css-watch"
   },
@@ -12,9 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "bulma": "^0.7.1",
-    "node-sass": "^4.9.2"
-  },
-  "dependencies": {
+    "node-sass": "^4.9.2",
     "hoek": "^5.0.3"
   }
 }
