--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "author": "André Thiele",
   "license": "MIT",
-  "devDependencies": {
-    "bulma": "^0.7.1",
+  "dependencies": {
+    "bulma": "^0.7.1"
+  },
+  "devDependencies": {   
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.3"
   }
