--- a/package.json
+++ b/package.json
@@ -4,17 +4,33 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url src/scss/styles.scss dist/css/styles.css",
-    "css-watch": "npm run css-build -- --watch",
-    "start": "npm-run-all -p css-*"
+    "build-task:scss:transpile": "node-sass-chokidar --include-path ./node_modules src/scss/ -o dist/css",
+    "build-task:watch:scss:transpile": "npm run build-task:scss:transpile -- --source-map true",
+    "build-task:scss:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
+    "build-task:watch:scss:autoprefixer": "npm run build-task:scss:autoprefixer",
+    "build:clean": "rimraf dist",
+    "build:scss": "npm-run-all -p build-task:scss:*",
+    "watch-task:scss": "npm-run-all -p build-task:watch:scss:*",
+    "watch:scss": "npm run build:scss && chokidar 'src/scss/**/*.scss' -c 'npm run watch-task:scss'",
+    "build:template": "cpx \"src/**/*.{html,js,png,jpg}\" dist",
+    "watch:template": "npm run build:template -- --watch",
+    "dev": "npm-run-all -p watch:*",
+    "prod": "npm-run-all -p build:*",
+    "start": "npm run dev"
   },
   "author": "André Thiele",
   "license": "MIT",
   "dependencies": {
     "bulma": "^0.7.1"
   },
-  "devDependencies": {   
+  "devDependencies": {
+    "autoprefixer": "^9.1.0",
+    "chokidar-cli": "^1.2.0",
+    "cpx": "^1.5.0",
     "node-sass": "^4.9.2",
-    "npm-run-all": "^4.1.3"
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0",
+    "rimraf": "^2.6.2"
   }
 }
